--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					id="search"
 					class="search"
 					type="text"
-					placeholder="Search for a country"
+					placeholder="Search for a country..."
 				/>
 
 				<div class="dropdown" id="filter">
@@ -63,11 +63,11 @@
 				<h2>Loading...</h2>
 			</div>
 		</section>
-        <footer>
-            <div class="foot-container">
-                All Copyrights &copy; reserved to <a href="https://www.linkedin.com/in/satya-prasad-behara-51ab861a2/">Satya Prasad Behara</a>
-            </div>
-        </footer>
+		<footer>
+		    <div class="foot-container">
+			All Copyrights &copy; reserved to <a href="https://www.linkedin.com/in/satya-prasad-behara-51ab861a2/">Satya Prasad Behara</a>
+		    </div>
+		</footer>
 		<script src="script.js"></script>
 	</body>
 </html>
